# spend_bot

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  README.rst  \  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: workflow-test.yml
spend_bot/: .bot.py.swp  bot.py  commands.py  handlers.py  location.py  sheets.py
tests/: test_spend_bot.py
