[tool.poetry]
name = "spend_bot"
version = "0.1.0"
description = ""
authors = ["Dmitrii Morozov <33morozov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"
python-dotenv = "^0.20.0"
pygsheets = "^2.0.5"
DateTime = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
